# licensechecker

./: .gitignore  .pre-commit-config.yaml  License.md  core.py  pyproject.toml  scan.py
licesenser/: connections.py  enums.py  schemas.py  shemas.py
licesenser/ai_models/: ai_interface.py  gemini_model.py  openai_model.py
licesenser/dependency_reader/: dependency.py  deps_reader.py  pipfile.py  poetry_toml.py  requirements_txt.py  utils.py
licesenser/license_manager/: get_dependency_license.py  get_project_license.py
tests/: conftest.py
tests/data/: Pipfile  dependencies.json  mock_data.py  pyproject.toml  requirements.txt
tests/dependencies/: test_dependency_readers.py
tests/licenses/: test_dependency_license.py  test_project_license.py  test_random.py
