[tool.poetry]
name = "licesenser"
version = "0.1.0"
description = ""
authors = ["bcx <femolak@gmail.com>"]
readme = "README.md"
license = "Apache2"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
openai = "^1.51.2"
langchain = "^0.3.3"
langchain-openai = "^0.2.2"
langchain-google-vertexai = "^2.0.4"
rich-click = "^1.8.3"
toml = "^0.10.2"
types-toml = "^0.10.8.20240310"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
licesenser = "core:app"
