[tool.poetry]
name = "licesenser"
version = "0.1.0"
description = ""
authors = ["bcx <femolak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
openai = "^1.51.2"
langchain = "^0.3.3"
langchain-openai = "^0.2.2"
langchain-google-vertexai = "^2.0.4"
rich-click = "^1.8.3"
toml = "^0.10.2"
aiofiles = "^24.1.0"
appdirs = "^1.4.4"
requests-cache = "^1.2.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.8.0"
pyright = "^1.1.389"
loguru = "^0.7.2"
markdown= "^3.6"
scipy = { version = "==1.7.1", markers = "python_version >= '3.6'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
licesenser = "core:app"
