[tool.poetry]
name = "sample-project"
version = "0.1.0"
description = "A sample Python project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
numpy = "1.21.0"
pandas = "*"
scipy = { version = "==1.7.1", markers = "python_version >= '3.6'" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
